# http-client-mcp

./: pyproject.toml
src/http_client_mcp/: __init__.py  main.py
