[project]
name = "http-client-mcp"
version = "0.1.0"
description = "Universal Secure HTTP Client MCP Server"
readme = "README.md"
authors = [
    { name = "Muhammadyusuf Kurbonov", email = "muhammadyusuf.kurbonov2002@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.0",
]

[project.scripts]
http-client-mcp = "http_client_mcp:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
